[gd_scene load_steps=2 format=3 uid="uid://d2vss4fbywtc6"]

[ext_resource type="Script" uid="uid://de1ui4dv5vp6g" path="res://assets/ui/hud/hud.gd" id="1_m1qs8"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1qs8")

[node name="GameLostLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "
GAME OVER!

Press [R] to restart"
horizontal_alignment = 1

[node name="GameWonLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "
YOU WON!

Press [R] to restart"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 2

[node name="HP_Bar" type="ProgressBar" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"HealthBar"
value = 75.0
show_percentage = false

[node name="HP_Label" type="Label" parent="MarginContainer/GridContainer/HP_Bar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = " HP"
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 60
text = "Kills: 0/10"
